--- a/form1.html
+++ b/form1.html
@@ -32,6 +32,7 @@
                 </td>
                 <td style="padding: 15px;"><textarea name="" id="opinion" cols="200" rows="10"></textarea></td>
             </tr>
+            <input type="submit">
         </table>
     </form>
 </body>
